z-index bug fix

--- a/src/components/layout/sections/education/components/ProgressUnit/ProgressUnit.module.css
+++ b/src/components/layout/sections/education/components/ProgressUnit/ProgressUnit.module.css
@@ -43,7 +43,7 @@
     background-color: var(--text-color);
     margin-right: 14px;
     position: relative;
-    z-index: 100;
+    z-index: 1;
     transform: translate(0, .5ch);
 }
 
