--- a/src/components/menu/Menu.module.css
+++ b/src/components/menu/Menu.module.css
@@ -96,7 +96,7 @@
 @media screen and (max-device-width: 857px) {
     .Menu {
         position: fixed;
-        z-index: 1;
+        z-index: 2;
         top: 0;
         right: 0;
         width: 100%;
